# theia

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
example/: CMakeLists.txt  indev.cpp
include/glfwpp/: context.hpp  cursor.hpp  glfwpp.hpp  input.hpp  monitor.hpp  window.hpp
include/theia/: dear.hpp  glfw_raii.hpp  hermes.hpp  io.hpp  logger.hpp  overlay.hpp  theia.hpp  window.hpp
src/glfwpp/: context.cpp  cursor.cpp  glfwpp.cpp  input.cpp  monitor.cpp  window.cpp
src/theia/: dear.cpp  glfw_raii.cpp  io.cpp  logger.cpp  overlay.cpp  theia.cpp  window.cpp
